--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "yt-clone",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://zack1808.github.io/yt-clone",
   "dependencies": {
     "@iconscout/react-unicons": "^1.1.6",
     "@testing-library/jest-dom": "^5.16.5",
@@ -17,6 +18,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
